[package]
name = "rlib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.40", features = ["full"] }
dashmap = "6.0"
reqwest = { version = "0.13", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
# 数据库 (使用运行时动态查询，无需编译期检查)
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
# 加密与编码
num-bigint = "0.4"
aes = "0.8"
cbc = "0.1"
block-padding = "0.4"
base64 = "0.22"
urlencoding = "2.1"
