[package]
name = "rlib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.40", features = ["full"] }
dashmap = "6.0"
reqwest = { version = "0.13", features = ["json", "cookies", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "macros",
] }

# 加密相关
num-bigint = "0.4"
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.5", features = ["block-padding"] }
base64 = "0.22"
